# voice-benchmarking-platform

./: .env.example  .gitignore  app.py  providers.yaml  pyproject.toml
docs/: Technical-Design.md  development.md  user-guide.md
src/voice_benchmarking_platform/: benchmark.py  cli.py  evaluator.py  leaderboard.py  models.py  scoring.py
src/voice_benchmarking_platform/providers/: __init__.py  assemblyai.py  base.py  deepgram.py  openai_whisper.py  registry.py  yaml_provider.py
tests/: test_benchmark.py  test_evaluator.py  test_scoring.py
