[project]
name = "voice-benchmarking-platform"
version = "0.1.0"
description = "Multi-provider STT benchmarking: WER, latency, and cost analysis"
authors = [
    {name = "Orange",email = "49698511+OrangesGit@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic>=2.7",
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "jiwer>=3.0",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "deepgram-sdk>=3.4",
]

[project.optional-dependencies]
bonus = [
    "assemblyai>=0.26",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-asyncio = ">=0.23"
pytest-mock = ">=3.14"
respx = ">=0.21"

[project.scripts]
benchmark = "voice_benchmarking_platform.cli:cli"

[tool.poetry]
packages = [{include = "voice_benchmarking_platform", from = "src"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
